# aoc-proofing-repo

./: .gitignore  README.md  hello.py  pyproject.toml
2024-cheat-sheet/: day-6-1.py
2024-cheat-sheet/day-10/: day-10.py
2024-cheat-sheet/day-14/: day-14-1.py
2024-cheat-sheet/day-15/: day-15-2.py
2024-cheat-sheet/day-16/: day-16-proofing.py  day-16.py
2024-cheat-sheet/day-17/: day-17.py
2024-cheat-sheet/day-18/: day-18.py
2024-cheat-sheet/day-5/: day-5.py
2024-cheat-sheet/day-6/: day-6-2.py
2024-cheat-sheet/day-7/: day-7-1.py  day-7.py
2024-cheat-sheet/day-9/: day-9.py
2024/day-11/: day-11.py
2024/day-12/: day-12.py
2024/day-13/: day-13.py
2024/day-14/: day-14.py
2024/day-15/: day-15-1.py
2024/day-18/: day-18.py
2024/day-19/: day-19.py
2024/day-20/: day-20.py
2024/day-21/: day-21.py
2024/day-22/: day-22.py  test.py  test1.py  test2.py
2024/day-23/: day-23.py
2024/day-24/: day-24.py  test.py
2024/day-25/: day-25.py  test.py
2024/day-6/: requirements.txt
2024/day-7/: day-7-2.py
2024/day-8/: day-8.py
2024/day-9/: day-9-alt.py
