[project]
name = "aoc-proofing-repo"
version = "0.1.0"
description = "A learning resource for the community"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "networkx>=3.4.2",
    "notepad>=1.3.5",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "setuptools>=75.6.0",
    "sympy>=1.13.3",
    "z3>=0.2.0",
    "z3-solver>=4.13.4.0",
]
